--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             oscilbox.setTimePeriod(1, FPS);
             
             canvas = document.getElementById("movingpaint");
-            movingpaint = new MovingPaint(canvas, 9, "orange", "rgb(0, 255, 152)");
+            movingpaint = new MovingPaint(canvas, 9);
 
             // Make 'em clickable
             for(const ele of document.getElementsByTagName("canvas"))
